MT36684 : Fix radio buttons alignement in the choice of timetables for the week in agent/workinghours

--- a/public/themes/default/default.css
+++ b/public/themes/default/default.css
@@ -328,6 +328,12 @@ li .agent-acces-checked2{
   padding-right: 20px;
 }
 
+#EDTTabs .tableauStandard td{
+  text-align: right;
+  vertical-align:top;
+  padding-right: 20px;
+}
+
 .tableauFiches td{
   vertical-align:top;
   padding: 0 60px 10px 10px;
